--- a/index.css
+++ b/index.css
@@ -1,141 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Kodchasan:wght@300&display=swap');
-*
-{
-  margin:0;
-  padding:0em 0em 0em 10px;
-  right: 10em;
-  box-sizing:border-box;
-  font-family:'Yanone Kaffeesatz', sans-serif; /*Tipografia*/
-}
-body
-{
-  display:flex;
-  justify-content:center;
-  min-height:10em;
-  background: #434750; /*Color del fondo*/
-}
-ul li
-{
-  position:relative;
-  list-style:none;
-  width:10em;
-  background:#3e3f46;
-  padding:1em;
-  z-index: var(--i);
-  transition:0.5s;
-}
-ul li:hover
-{
-  background:#33cc8c; /*color de la parte frontal del recuadro*/
-  transform:translateX(40px); /*distancia de deslice del recuadro*/
-}
-ul li a
-{
-  text-decoration: none;
-  color:rgb(209, 209, 209); /*color de las letras frontal del recuadro (Estatico)*/
-  display: block;
-  text-transform: uppercase;
-  letter-spacing: 0.05em;
-  transition: 0.5s;
-}
-
-ul li:hover a
-{
-  color: rgb(255, 255, 255); /*color de las letras frontal del recuadro (En accion)*/
-}
-ul.menu
-{
-  position:fixed;
-  top:19em;
-  left:10.5em;
-}
-#design
-{
-  position:absolute;
-  background: #ffffff;
-  margin:0;
-  top:55px;
-  left:25px;
-  width: 200px;
-  height: 10px;
-  transform-origin:bottom;
-  transform: skewY(-10deg);
-}
-div.mitad
-{
-  position:fixed;
-  bottom:0;
-  list-style:none;
-  width:200em;
-  margin:0;
-  left:0px;
-  background:#3e3f46;
-  padding:1em;
-  height:2em;
-  transition:0.5s;
-}
-
-@import url(https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900);
-
-h1,
-p,
-a{
-  margin: 0;
-  padding: 0;
-  font-family: 'Lato';
-}
-
-h1 {
-  font-size: 2.5em;
-  left:50px;
-  padding: 5px 0;
-  font-weight: 800;
-}
-
-p {
-  font-size: 1.1em;
-  font-weight: 100;
-  letter-spacing: 5px;
-}
-
-.header {
-  width: 100%;
-  padding:60px 0;
-  text-align: center;
-  background: #33cc8c;
-  color: white;
-}
-
-
-.btn-bgstroke {
-  font-size: 20px;
-  display: inline-block;
-  border: 1px solid white;
-  padding: 10px 20px;
-  border-radius: 10px;
-  cursor: pointer;
-  font-weight: 300;
-  margin-top: 30px; 
-}
-
-.btn-bgstroke:hover {
-  background-color: white;
-  color: hsl(207, 60%, 50%);
-}
-
-.inline-block
-{
-  display:inline-block;
-  padding:15px;
-}
-
-footer {
-  width: 100%;
-  padding:1em;
-  margin-top:100em;
-  position:top;
-  text-align: center;
-  background: #000000;
-  color: rgb(255, 255, 255);
-}
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Portfolio - Shyro</title>
+        <link rel="stylesheet" href="index.css">
+        <link rel="design" href="design.css">
+    </head>
+    <!---ENCABEZADO-->
+        <section class="header">
+            <h1>iShyro's</h1>
+            <p>Private website about me</p>
+            <img src="pregunta.png" href="#" class="inline-block" width="80px">
+            <img src="email.png" href="#" class="inline-block" width="80px">
+        </section>
+    <!---ENCABEZADO-->
+    <body>
+    <!---MENU PRINCIPAL-->
+        <section class="menu">
+            <ul>
+                <li style="--i:5;"><a href="index.html">Home</a></li>
+                <li style="--i:3;"><a href="#">Portfolio</a></li>
+                <li style="--i:2;"><a href="#">Calculator</a></li>
+            </ul>
+        </section>
+        <section>
+            <ul class="contenedor">
+            </ul>
+        </section>
+    <!---MENU PRINCIPAL-->
+    </body>
+    <!---PIE DE PAGINA--->
+    <footer>
+        Copyright reserved &copy; 2022<br>
+        Design by iShyro <br>
+    </footer>
+    <!---PIE DE PAGINA--->
+</html>
