--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kodchasan:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kodchasan:wght@300&family=Nunito+Sans:wght@800&display=swap');
 
 *
 {
@@ -7,19 +8,20 @@
   padding:0;
   right: 10em;
   box-sizing:border-box;
-  font-family:'Yanone Kaffeesatz', sans-serif; /*Tipografia*/
+  font-family:'Nunito Sans', sans-serif; /*Tipografia*/
 }
 body
 {
   justify-content:center;
-  background: #434750; /*Color del fondo*/
+  zoom: 100px;
+  background: #f0f4f8; /*Color del fondo*/
 }
 ul li
 {
   position:relative;
   list-style:none;
   width:10em;
-  background:#000000;
+  background:#d9e2ec;
   padding:1em;
   z-index: var(--i);
   transition:0.5s;
@@ -32,7 +34,7 @@ ul li:hover
 ul li a
 {
   text-decoration: none;
-  color:rgb(209, 209, 209); /*color de las letras frontal del recuadro (Estatico)*/
+  color:rgb(60, 79, 88); /*color de las letras frontal del recuadro (Estatico)*/
   display: block;
   text-transform: uppercase;
   letter-spacing: 0.05em;
@@ -48,18 +50,7 @@ section.menu
 {
   position:left;
   margin-left:10em;
-}
-#design
-{
-  position:absolute;
-  background: #ffffff;
-  margin:0;
-  top:55px;
-  left:25px;
-  width: 200px;
-  height: 10px;
-  transform-origin:bottom;
-  transform: skewY(-10deg);
+  margin-top:-15em;
 }
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900);
 /*MARGEN Y PADDING DE A,P,H1*/
@@ -68,7 +59,7 @@ p,
 a{
   margin: 0px;
   padding: 0;
-  font-family: 'Lato';
+  font-family: 'Nunito Sans';
 }
 /*MARGEN Y PADDING DE A,P,H1*/
 
@@ -81,9 +72,9 @@ h1 {
 /*DISEÑO DE H1*/
 
 /*DISEÑO DE PARAGRAFO*/
-p {
-  font-size: 1.1em;
-  font-weight: 1000;
+p.header {
+  font-size: 15px;
+  font-weight: 900;
   letter-spacing: 5px;
 }
 /*DISEÑO DE PARAGRAFO*/
@@ -91,7 +82,7 @@ p {
 /*ENCABEZADO*/
 .header {
   width: 100%;
-  padding:1em;
+  padding:5px;
   margin:0;
   text-align: center;
   background-image:linear-gradient(to right, #2fbd82,hsl(207, 60%, 50%)); /*#2fbd82*/
@@ -121,24 +112,93 @@ p {
 /*PIE DE PAGINA*/
 footer {
   width: 100%;
-  padding:1em;
-  margin-top:5em;
-  position:top;
+  padding:1px;
+  left:0;
+  bottom:0px;
+  position: fixed;
   text-align: center;
-  background: #000000;
-  color: rgb(255, 255, 255);
+  background: #d9e2ec;
+  color: rgb(60, 79, 88);
 }
 /*PIE DE PAGINA*/
 
+/*Scroll personalizado*/
+
+body::-webkit-scrollbar {
+  width:7px;
+  background:#383b42;
+}
+
+body::-webkit-scrollbar-thumb{
+  background:black;
+  border-radius:10px;
+}
+/*Scroll personalizado*/
+
+.logo{
+  border-radius:50%;
+  border-style: solid;
+}
 .contenedor{
   width:70%;
   height:20em;
-  margin-left:15em;
-  margin-top:-5em;
-  padding:20em;
-  position:center;
-  background: #383b42;
+  max-width:1000px;
+  margin:5px;
+  border-radius:20px;
+  position:relative;
+  left:13em;
+  bottom:10em;
+  z-index: -1;
+  background-color: #d9e2ec;
+
+}
+
+.sombra
+{
+  width:100%;
+  max-width:1000px;
+  height:315px;
+  margin:20px auto;
+  border-radius:20px;
+  background-color:#ffffff;
+
+}
+p.sobremi{
+  color:rgb(60, 79, 88);
+  font-size:15px;
   text-align:center;
-  font-family:"Lato";
-  color: #ffffff;
+  font-family: "Arial";
+  padding:5px;
+}
+
+p.titulo
+{
+  color:rgb(60, 79, 88);
+  background: #d9e2ec;
+  margin:10px auto;
+  border-top-right-radius:20px;
+  font-size: 20px;
+  text-align:center;
+  border-top-left-radius:20px;
+}
+
+.downline-block{
+  display:block;
+  margin-left:10px;
+  margin-top:0px;
+  padding:1px;
+}
+
+.downline-block-i{
+  display:block;
+  margin-left:11px;
+  font-style:italic;
+  margin-top:0px;
+  padding:1px;
+}
+
+.inline-block-logo{
+  display:inline-block;
+  margin-left:20px;
+  padding:0px;
 }
