--- a/index.css
+++ b/index.css
@@ -1,269 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Kodchasan:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Kodchasan:wght@300&family=Nunito+Sans:wght@800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@1,300&display=swap');
-
-*{
-  margin:0;
-  padding:0;
-  right: 10em;
-  box-sizing:border-box;
-  font-family:'Nunito Sans', sans-serif; /*Tipografia*/
-}
-body
-{
-  justify-content:center;
-  zoom: 100px;
-  background: #f0f4f8; /*Color del fondo*/
-}
-ul li
-{
-  position:relative;
-  list-style:none;
-  width:10em;
-  background:#d9e2ec;
-  padding:1em;
-  z-index: var(--i);
-  transition:0.5s;
-}
-
-.color {
-  background:#16fff3;
-}
-ul li:hover
-{
-  background:#33cc8c; /*color de la parte frontal del recuadro*/
-  transform:translateX(40px); /*distancia de deslice del recuadro*/
-}
-ul li a
-{
-  text-decoration: none;
-  color:rgb(60, 79, 88); /*color de las letras frontal del recuadro (Estatico)*/
-  display: block;
-  text-transform: uppercase;
-  letter-spacing: 0.05em;
-  transition: 0.5s;
-}
-
-ul li:hover a
-{
-  color: rgb(255, 255, 255); /*color de las letras frontal del recuadro (En accion)*/
-}
-/*Fin, del menu*/
-section.menu 
-{
-  position:left;
-  margin-left:10em;
-  margin-top:-15em;
-}
-@import url(https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900);
-/*MARGEN Y PADDING DE A,P,H1*/
-h1,
-p,
-a{
-  margin: 0px;
-  padding: 0;
-  font-family: 'Nunito Sans';
-}
-/*MARGEN Y PADDING DE A,P,H1*/
-
-/*DISEÑO DE H1*/
-h1 {
-  font-size: 2.5em;
-  left:1em;
-  font-weight: 800;
-}
-/*DISEÑO DE H1*/
-
-/*DISEÑO DE PARAGRAFO*/
-p.header {
-  font-size: 15px;
-  font-weight: 900;
-  letter-spacing: 5px;
-}
-/*DISEÑO DE PARAGRAFO*/
-
-/*ENCABEZADO*/
-.header {
-  width: 100%;
-  padding:5px;
-  margin:0;
-  text-align: center;
-  background-image:linear-gradient(to right, #2fbd82,hsl(207, 60%, 50%)); /*#2fbd82*/
-  color: white;
-} 
-/*ENCABEZADO*/
-
-/*Hover*/
-.btn-bgstroke:hover {
-  background-color: white;
-  color: hsl(207, 60%, 50%);
-}
-/*Hover*/
-
-/*DISTANCIA DE SEPARACION, ICONOS*/
-.inline-block
-{
-  display:inline-block;
-  padding:1em;
-}
-/*DISTANCIA DE SEPARACION, ICONOS*/
-
-/*CONTENEDOR*/
-
-/*CONTENEDOR*/
-
-/*PIE DE PAGINA*/
-footer {
-  width: 100%;
-  padding:1px;
-  left:0;
-  bottom:0px;
-  position: center;
-  text-align: center;
-  font-size:12px;
-  background: #d9e2ec;
-  color: rgb(60, 79, 88);
-}
-/*PIE DE PAGINA*/
-
-/*Scroll personalizado*/
-
-body::-webkit-scrollbar {
-  width:10px;
-  background:#383b42;
-}
-
-body::-webkit-scrollbar-thumb{
-  background:#2fbd82;
-  border-radius:10px;
-}
-/*Scroll personalizado*/
-
-.logo{
-  border-radius:50%;
-  border-style: solid;
-}
-.contenedor{
-  width:70%;
-  height:20em;
-  max-width:1000px;
-  margin:5px;
-  border-radius:20px;
-  position:relative;
-  left:13em;
-  bottom:10em;
-  z-index: -1;
-  background-color: #d9e2ec;
-
-}
-
-.sombra
-{
-  width:100%;
-  max-width:1000px;
-  height:315px;
-  margin:20px auto;
-  border-radius:20px;
-  background-color:#ffffff;
-
-}
-p.sobremi{
-  color:rgb(60, 79, 88);
-  font-size:15px;
-  text-align:center;
-  font-family: "Arial";
-  padding:5px;
-}
-
-p.titulo
-{
-  color:rgb(60, 79, 88);
-  background: #d9e2ec;
-  margin:10px auto;
-  border-top-right-radius:20px;
-  font-size: 20px;
-  text-align:center;
-  border-top-left-radius:20px;
-}
-
-.downline-block{
-  display:block;
-  margin-left:10px;
-  margin-top:0px;
-  padding:1px;
-}
-
-.downline-block-i{
-  display:block;
-  margin-left:11px;
-  font-style:italic;
-  margin-top:0px;
-  padding:1px;
-}
-
-.inline-block-logo{
-  display:inline-block;
-  margin-left:20px;
-  padding:0px;
-}
-
-
-
-/*Contenedor*/
-section.container{
-  width:70%;
-  height:305px;
-  max-width:1000px;
-  margin:5px;
-  border-radius:20px;
-  position:relative;
-  left:13em;
-  bottom:10em;
-  z-index: -1;
-  background: #d9e2ec;
-}
-.containerl
-{
-  width:100%;
-  max-width:1000px;
-  height:300px;
-  justify-content: center;
-  margin:20px auto;
-  border-radius:20px;
-  background-color:#ffffff;
-}
-p.container{
-  color:rgb(60, 79, 88);
-  font-size:1.5em;
-  text-align:right;
-  margin-right:6em;
-  font-family: "Nunito Sans";
-  padding:5px;
-}
-.container-block{
-  border-radius:20px;
-  margin-left:20px;
-  margin-top:35px;
-  border-style: solid;
-  border-width:5px;
-  border-color:#d9e2ec;
-}
-.container-text{
-  padding:10px;
-  margin:8px;
-  font-style: italic;
-  font-family:Ubuntu;
-  font-size:17px;
-  text-align: center;
-}
-.header-container{
-  margin:1em;
-  padding-top:1.5em;
-  font-style: bold;
-  color:#33cc8c;
-  font-family:Nunito Sans;
-  font-size:2em;
-  text-align: center;
-}
-/*Contenedor*/
+@import url("https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300&display=swap");@import url("https://fonts.googleapis.com/css2?family=Kodchasan:wght@300&display=swap");@import url("https://fonts.googleapis.com/css2?family=Kodchasan:wght@300&family=Nunito+Sans:wght@800&display=swap");@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@1,300&display=swap");*{margin-left:0;}ul li:hover{background:#33cc8c;}ul li a{text-decoration:none;}body{justify-content:center;}*{margin-bottom:0;}ul li a{color:#3c4f58;}[class~=color]{background:#16fff3;}section[class~=menu]{position:left;}ul li{position:relative;}body{zoom:6.25pc;}ul li a{display:block;}section[class~=menu]{margin-left:10em;}section[class~=menu]{margin-top:-15em;}ul li{list-style:none;}ul li{width:10em;}body{background:#f0f4f8;}ul li{background:#d9e2ec;}ul li a{text-transform:uppercase;}ul li a{letter-spacing:.05em;}*{margin-right:0;}ul li,ul li a{transition:.5s;}*{margin-top:0;}*{padding-left:0;}*{padding-bottom:0;}*{padding-right:0;}ul li{padding-left:1em;}ul li{padding-bottom:1em;}*{padding-top:0;}*{right:10em;}ul li:hover a{color:#fff;}*{box-sizing:border-box;}ul li{padding-right:1em;}ul li{padding-top:1em;}ul li{z-index:var(--i);}*{font-family:"Nunito Sans",sans-serif;}ul li:hover{transform:translateX(40px);}@import url("https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900");p[class~=header],p[class~=sobremi]{font-size:.9375pc;}h1{margin-left:0pc;}[class~=header]{width:100%;}[class~=header],p[class~=sobremi]{padding-left:.052083333in;}h1{margin-bottom:0pc;}*::-webkit-scrollbar{width:10px;}[class~=header],p[class~=sobremi]{padding-bottom:.052083333in;}p[class~=sobremi],[class~=header]{padding-right:.052083333in;}p[class~=sobremi],[class~=header]{padding-top:.052083333in;}p[class~=header]{font-weight:900;}h1{margin-right:0pc;}p[class~=header]{letter-spacing:5px;}h1{margin-top:0pc;}[class~=header]{margin-left:0;}[class~=header]{margin-bottom:0;}p[class~=titulo],p[class~=sobremi]{color:#3c4f58;}[class~=header]{margin-right:0;}h1{padding-left:0;}[class~=header]{margin-top:0;}h1{padding-bottom:0;}[class~=header],p[class~=sobremi]{text-align:center;}[class~=header]{background-image:linear-gradient(to right,#2fbd82,hsl(207,60%,50%));}[class~=header]{color:white;}[class~=inline-block]{display:inline-block;}[class~=inline-block]{padding-left:1em;}[class~=inline-block]{padding-bottom:1em;}p[class~=sobremi]{font-family:"Arial";}[class~=inline-block]{padding-right:1em;}h1{padding-right:0;}[class~=inline-block]{padding-top:1em;}[class~=logo]{border-radius:50%;}h1{padding-top:0;}.btn-bgstroke:hover{background-color:white;}[class~=logo]{border-left-style:solid;}[class~=logo]{border-bottom-style:solid;}[class~=logo]{border-right-style:solid;}[class~=logo]{border-top-style:solid;}[class~=contenedor],section[class~=container]{width:70%;}[class~=contenedor]{height:20em;}h1{font-family:"Nunito Sans";}[class~=contenedor],[class~=containerl],[class~=sombra],section[class~=container]{max-width:62.5pc;}[class~=contenedor]{margin-left:.052083333in;}p[class~=titulo]{background:#d9e2ec;}[class~=sombra],p[class~=titulo]{margin-left:auto;}p[class~=titulo]{margin-bottom:.625pc;}section[class~=container],[class~=contenedor]{margin-bottom:.052083333in;}p[class~=titulo]{margin-right:auto;}section[class~=container],[class~=contenedor]{margin-right:.052083333in;}p[class~=titulo]{margin-top:.625pc;}p{margin-left:0pc;}section[class~=container],[class~=contenedor]{margin-top:.052083333in;}[class~=contenedor],[class~=sombra]{border-radius:15pt;}p{margin-bottom:0pc;}section[class~=container],[class~=contenedor]{position:relative;}p{margin-right:0pc;}p[class~=titulo]{border-top-right-radius:.208333333in;}p[class~=titulo]{font-size:.208333333in;}section[class~=container],[class~=contenedor]{left:13em;}[class~=contenedor]{bottom:10em;}[class~=contenedor]{z-index:-1;}[class~=contenedor]{background-color:#d9e2ec;}[class~=sombra]{width:100%;}p{margin-top:0pc;}p{padding-left:0;}[class~=sombra]{height:19.6875pc;}[class~=sombra]{margin-bottom:15pt;}[class~=sombra]{margin-right:auto;}[class~=sombra]{margin-top:15pt;}p[class~=titulo]{text-align:center;}p[class~=titulo]{border-top-left-radius:15pt;}section[class~=container]{height:3.177083333in;}[class~=sombra]{background-color:#fff;}p,a{padding-bottom:0;}section[class~=container]{margin-left:5px;}[class~=downline-block-i],.downline-block{display:block;}.downline-block{margin-left:.104166667in;}[class~=downline-block-i],.downline-block{margin-top:0pt;}p{padding-right:0;}[class~=downline-block-i],.downline-block{padding-left:.75pt;}.downline-block,[class~=downline-block-i]{padding-bottom:.75pt;}.downline-block,[class~=downline-block-i]{padding-right:.75pt;}[class~=container-block],[class~=containerl],section[class~=container]{border-radius:.208333333in;}[class~=downline-block-i],.downline-block{padding-top:.75pt;}p,a{padding-top:0;}[class~=downline-block-i]{margin-left:11px;}[class~=downline-block-i]{font-style:italic;}*::-webkit-scrollbar{background:#383b42;}a,p{font-family:"Nunito Sans";}[class~=inline-block-logo]{display:inline-block;}*::-webkit-scrollbar-thumb{background:#2fbd82;}[class~=inline-block-logo]{margin-left:20px;}[class~=inline-block-logo]{padding-left:0in;}[class~=inline-block-logo]{padding-bottom:0in;}a{margin-left:0pc;}[class~=inline-block-logo]{padding-right:0in;}[class~=inline-block-logo]{padding-top:0in;}[class~=containerl],footer{width:100%;}section[class~=container]{bottom:10em;}a{margin-bottom:0pc;}a{margin-right:0pc;}a{margin-top:0pc;}a{padding-left:0;}[class~=containerl]{height:300px;}[class~=containerl]{justify-content:center;}[class~=containerl]{margin-left:auto;}*::-webkit-scrollbar-thumb{border-radius:.104166667in;}[class~=containerl]{margin-bottom:15pt;}[class~=containerl]{margin-right:auto;}[class~=containerl]{margin-top:15pt;}[class~=containerl]{background-color:#fff;}[class~=container-block]{margin-left:.208333333in;}[class~=container-block]{margin-top:.364583333in;}[class~=container-block]{border-left-style:solid;}[class~=container-block]{border-bottom-style:solid;}a{padding-right:0;}[class~=container-block]{border-right-style:solid;}[class~=container-block]{border-top-style:solid;}[class~=container-block]{border-left-width:3.75pt;}h1{font-size:2.5em;}h1{left:1em;}h1{font-weight:800;}[class~=container-block]{border-bottom-width:3.75pt;}[class~=container-block]{border-right-width:3.75pt;}[class~=container-block]{border-top-width:3.75pt;}[class~=container-block]{border-left-color:#d9e2ec;}[class~=container-block]{border-bottom-color:#d9e2ec;}section[class~=container]{z-index:-1;}[class~=container-block]{border-right-color:#d9e2ec;}[class~=container-block]{border-top-color:#d9e2ec;}[class~=container-text]{padding-left:.104166667in;}[class~=container-text]{padding-bottom:.104166667in;}[class~=container-text]{padding-right:.104166667in;}[class~=container-text]{padding-top:.104166667in;}footer,section[class~=container]{background:#d9e2ec;}[class~=container-text]{margin-left:.5pc;}[class~=container-text]{margin-bottom:.5pc;}[class~=container-text]{margin-right:.5pc;}[class~=container-text]{margin-top:.5pc;}[class~=container-text]{font-style:italic;}footer{padding-left:.75pt;}footer{padding-bottom:.75pt;}footer{padding-right:.75pt;}footer{padding-top:.75pt;}footer,p[class~=container]{color:#3c4f58;}[class~=container-text]{font-family:Ubuntu;}[class~=container-text]{font-size:12.75pt;}p[class~=container]{font-size:1.5em;}footer{left:0;}p[class~=container]{text-align:right;}[class~=container-text],footer,[class~=header-container]{text-align:center;}[class~=header-container]{margin-left:1em;}footer{bottom:0pt;}[class~=header-container]{margin-bottom:1em;}[class~=header-container]{margin-right:1em;}footer{position:center;}p[class~=container]{margin-right:6em;}[class~=header-container]{margin-top:1em;}p[class~=container]{font-family:"Nunito Sans";}[class~=header-container]{padding-top:1.5em;}[class~=header-container]{font-style:bold;}footer{font-size:12px;}[class~=header-container]{color:#33cc8c;}p[class~=container]{padding-left:3.75pt;}[class~=header-container]{font-family:Nunito Sans;}[class~=header-container]{font-size:2em;}body::-webkit-scrollbar{width:10px;}[class~=form]{display:flex;}[class~=form]{justify-content:center;}[class~=form]{align-items:center;}body::-webkit-scrollbar{background:#383b42;}body::-webkit-scrollbar-thumb{background:#2fbd82;}[class~=form]{margin-left:5%;}[class~=form]{width:90%;}p[class~=container]{padding-bottom:3.75pt;}[class~=form]{height:50em;}[class~=form]{border-left-style:none;}p[class~=container]{padding-right:3.75pt;}p[class~=container]{padding-top:3.75pt;}body::-webkit-scrollbar-thumb{border-radius:.625pc;}[class~=form]{border-bottom-style:none;}[class~=form]{border-right-style:none;}[class~=form]{border-top-style:none;}.btn-bgstroke:hover{color:hsl(207,60%,50%);}
