--- a/index.css
+++ b/index.css
@@ -1,1 +1,281 @@
-@import url("https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300&display=swap");@import url("https://fonts.googleapis.com/css2?family=Kodchasan:wght@300&display=swap");@import url("https://fonts.googleapis.com/css2?family=Kodchasan:wght@300&family=Nunito+Sans:wght@800&display=swap");@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@1,300&display=swap");ul li{position:relative;}ul li{list-style:none;}ul li a{text-decoration:none;}ul li:hover{background:#33cc8c;}ul li{width:10em;}ul li{background:#d9e2ec;}ul li a{color:#3c4f58;}ul li{padding-left:1em;}ul li:hover a{color:#fff;}*{margin-left:0;}section.menu{position:left;}ul li{padding-bottom:1em;}section.menu{margin-left:10em;}ul li a{display:block;}ul li{padding-right:1em;}ul li a{text-transform:uppercase;}ul li{padding-top:1em;}*{margin-bottom:0;}ul li a{letter-spacing:.05em;}*{margin-right:0;}section.menu{margin-top:-15em;}ul li{z-index:var(--i);}ul li a,ul li{transition:.5s;}body{justify-content:center;}ul li:hover{transform:translateX(40px);}*{margin-top:0;}*{padding-left:0;}[class~=color]{background:#16fff3;}*{padding-bottom:0;}body{zoom:75pt;}*{padding-right:0;}*{padding-top:0;}*{right:10em;}*{box-sizing:border-box;}*{font-family:"Nunito Sans",sans-serif;}body{background:#f0f4f8;}@import url("https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900");p[class~=sobremi],p.header{font-size:15px;}[class~=header]{width:100%;}[class~=header],p[class~=sobremi]{padding-left:.052083333in;}p[class~=sobremi],[class~=header]{padding-bottom:.052083333in;}[class~=header]{padding-right:.052083333in;}[class~=header]{padding-top:.052083333in;}p.header{font-weight:900;}h1,p{margin-left:0pt;}[class~=header]{margin-left:0;}p.header{letter-spacing:5px;}h1,p{margin-bottom:0pt;}[class~=header]{margin-bottom:0;}p.titulo,p[class~=sobremi]{color:#3c4f58;}[class~=header]{margin-right:0;}[class~=header]{margin-top:0;}[class~=header],p[class~=sobremi]{text-align:center;}p,h1{margin-right:0pt;}[class~=header]{background-image:linear-gradient(to right,#2fbd82,hsl(207,60%,50%));}[class~=header]{color:white;}h1,p{margin-top:0pt;}[class~=inline-block]{display:inline-block;}[class~=inline-block]{padding-left:1em;}[class~=inline-block]{padding-bottom:1em;}[class~=inline-block]{padding-right:1em;}p,h1{padding-left:0;}[class~=inline-block]{padding-top:1em;}[class~=logo]{border-radius:50%;}p,h1{padding-bottom:0;}[class~=logo]{border-left-style:solid;}[class~=logo]{border-bottom-style:solid;}[class~=logo]{border-right-style:solid;}[class~=logo]{border-top-style:solid;}.btn-bgstroke:hover{background-color:white;}h1,p{padding-right:0;}h1,p{padding-top:0;}[class~=contenedor]{width:70%;}[class~=contenedor]{height:20em;}h1,p{font-family:"Nunito Sans";}p[class~=sobremi]{font-family:"Arial";}[class~=sombra],[class~=contenedor]{max-width:1000px;}[class~=contenedor]{margin-left:3.75pt;}[class~=contenedor]{margin-bottom:3.75pt;}[class~=contenedor]{margin-right:3.75pt;}[class~=contenedor]{margin-top:3.75pt;}[class~=contenedor],[class~=sombra]{border-radius:1.25pc;}[class~=contenedor]{position:relative;}[class~=contenedor]{left:13em;}[class~=contenedor]{bottom:10em;}p[class~=sobremi]{padding-right:.052083333in;}p[class~=sobremi]{padding-top:.052083333in;}[class~=contenedor]{z-index:-1;}[class~=contenedor]{background-color:#d9e2ec;}[class~=containerl],[class~=sombra]{width:100%;}[class~=sombra]{height:315px;}p.titulo{background:#d9e2ec;}[class~=sombra],p.titulo{margin-left:auto;}[class~=sombra],[class~=containerl]{margin-bottom:1.25pc;}p.titulo,[class~=sombra],[class~=containerl]{margin-right:auto;}[class~=sombra]{margin-top:1.25pc;}p.titulo{margin-bottom:.625pc;}[class~=sombra],[class~=containerl]{background-color:#fff;}[class~=downline-block-i],[class~=downline-block]{display:block;}[class~=downline-block]{margin-left:.104166667in;}[class~=downline-block-i],[class~=downline-block]{margin-top:0px;}[class~=downline-block],[class~=downline-block-i]{padding-left:.0625pc;}[class~=downline-block],[class~=downline-block-i]{padding-bottom:.0625pc;}p.titulo{margin-top:.625pc;}[class~=downline-block-i],[class~=downline-block]{padding-right:.0625pc;}p.titulo{border-top-right-radius:15pt;}[class~=downline-block-i],[class~=downline-block]{padding-top:.0625pc;}a{margin-left:0pt;}a{margin-bottom:0pt;}[class~=downline-block-i]{margin-left:8.25pt;}p.titulo{font-size:15pt;}[class~=downline-block-i]{font-style:italic;}[class~=inline-block-logo]{display:inline-block;}[class~=inline-block-logo]{margin-left:20px;}[class~=inline-block-logo]{padding-left:0pt;}a{margin-right:0pt;}[class~=inline-block-logo]{padding-bottom:0pt;}p.titulo{text-align:center;}[class~=inline-block-logo]{padding-right:0pt;}[class~=inline-block-logo]{padding-top:0pt;}p.titulo{border-top-left-radius:.208333333in;}[class~=containerl],section[class~=container]{max-width:62.5pc;}[class~=containerl]{height:18.75pc;}[class~=containerl]{justify-content:center;}[class~=containerl]{margin-left:auto;}[class~=containerl]{margin-top:.208333333in;}[class~=container-block],[class~=containerl]{border-radius:1.25pc;}a{margin-top:0pt;}section[class~=container]{width:70%;}[class~=container-block]{margin-left:1.25pc;}[class~=container-block]{margin-top:26.25pt;}[class~=container-block]{border-left-style:solid;}[class~=container-block]{border-bottom-style:solid;}[class~=container-block]{border-right-style:solid;}section[class~=container]{height:305px;}[class~=container-block]{border-top-style:solid;}[class~=container-block]{border-left-width:.3125pc;}[class~=container-block]{border-bottom-width:.3125pc;}[class~=container-block]{border-right-width:.3125pc;}[class~=container-block]{border-top-width:.3125pc;}[class~=container-block]{border-left-color:#d9e2ec;}a{padding-left:0;}[class~=container-block]{border-bottom-color:#d9e2ec;}[class~=container-block]{border-right-color:#d9e2ec;}[class~=container-block]{border-top-color:#d9e2ec;}[class~=container-text]{padding-left:.625pc;}[class~=container-text]{padding-bottom:.625pc;}[class~=container-text]{padding-right:.625pc;}a{padding-bottom:0;}a{padding-right:0;}[class~=container-text]{padding-top:.625pc;}[class~=container-text]{margin-left:.5pc;}a{padding-top:0;}section[class~=container]{margin-left:.052083333in;}[class~=container-text]{margin-bottom:.5pc;}[class~=container-text]{margin-right:.5pc;}[class~=container-text]{margin-top:.5pc;}a{font-family:"Nunito Sans";}[class~=container-text]{font-style:italic;}[class~=container-text]{font-family:Ubuntu;}h1{font-size:2.5em;}[class~=container-text]{font-size:1.0625pc;}footer,.header-container,[class~=container-text]{text-align:center;}.header-container{margin-left:1em;}.header-container{margin-bottom:1em;}section[class~=container]{margin-bottom:.052083333in;}h1{left:1em;}section[class~=container]{margin-right:.052083333in;}.header-container{margin-right:1em;}.header-container{margin-top:1em;}h1{font-weight:800;}.header-container{padding-top:1.5em;}.header-container{font-style:bold;}.header-container{color:#33cc8c;}.header-container{font-family:Nunito Sans;}section[class~=container]{margin-top:.052083333in;}footer{width:100%;}.header-container{font-size:2em;}footer{padding-left:.010416667in;}[class~=form]{display:flex;}section[class~=container]{border-radius:.208333333in;}[class~=form]{justify-content:center;}[class~=form]{align-items:center;}section[class~=container]{position:relative;}footer{padding-bottom:.010416667in;}footer{padding-right:.010416667in;}[class~=form]{margin-left:8%;}section[class~=container]{left:13em;}[class~=form]{width:90%;}section[class~=container]{bottom:10em;}footer{padding-top:.010416667in;}[class~=form]{margin-top:-13%;}[class~=form]{padding-bottom:10%;}[class~=form]{height:60em;}[class~=form]{border-left-style:none;}[class~=form]{border-bottom-style:none;}[class~=form]{border-right-style:none;}[class~=form]{border-top-style:none;}footer{left:0;}footer{bottom:0pt;}section[class~=container]{z-index:-1;}footer{position:center;}footer,section[class~=container]{background:#d9e2ec;}footer{font-size:.125in;}p[class~=container],footer{color:#3c4f58;}body::-webkit-scrollbar{width:.625pc;}body::-webkit-scrollbar{background:#383b42;}p[class~=container]{font-size:1.5em;}p[class~=container]{text-align:right;}p[class~=container]{margin-right:6em;}body::-webkit-scrollbar-thumb{background:#2fbd82;}p[class~=container]{font-family:"Nunito Sans";}body::-webkit-scrollbar-thumb{border-radius:.625pc;}p[class~=container]{padding-left:3.75pt;}p[class~=container]{padding-bottom:3.75pt;}p[class~=container]{padding-right:3.75pt;}.btn-bgstroke:hover{color:hsl(207,60%,50%);}p[class~=container]{padding-top:3.75pt;}
+@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kodchasan:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kodchasan:wght@300&family=Nunito+Sans:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@1,300&display=swap');
+
+*{
+  margin:0;
+  padding:0;
+  right: 10em;
+  box-sizing:border-box;
+  font-family:'Nunito Sans', sans-serif; /*Tipografia*/
+}
+body
+{
+  justify-content:center;
+  zoom: 100px;
+  background: #f0f4f8; /*Color del fondo*/
+}
+ul li
+{
+  position:relative;
+  list-style:none;
+  width:10em;
+  background:#d9e2ec;
+  padding:1em;
+  z-index: var(--i);
+  transition:0.5s;
+}
+
+.color {
+  background:#16fff3;
+}
+ul li:hover
+{
+  background:#33cc8c; /*color de la parte frontal del recuadro*/
+  transform:translateX(40px); /*distancia de deslice del recuadro*/
+}
+ul li a
+{
+  text-decoration: none;
+  color:rgb(60, 79, 88); /*color de las letras frontal del recuadro (Estatico)*/
+  display: block;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+  transition: 0.5s;
+}
+
+ul li:hover a
+{
+  color: rgb(255, 255, 255); /*color de las letras frontal del recuadro (En accion)*/
+}
+/*Fin, del menu*/
+section.menu 
+{
+  position:left;
+  margin-left:10em;
+  margin-top:-15em;
+}
+@import url(https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900);
+/*MARGEN Y PADDING DE A,P,H1*/
+h1,
+p,
+a{
+  margin: 0px;
+  padding: 0;
+  font-family: 'Nunito Sans';
+}
+/*MARGEN Y PADDING DE A,P,H1*/
+
+/*DISEÑO DE H1*/
+h1 {
+  font-size: 2.5em;
+  left:1em;
+  font-weight: 800;
+}
+/*DISEÑO DE H1*/
+
+/*DISEÑO DE PARAGRAFO*/
+p.header {
+  font-size: 15px;
+  font-weight: 900;
+  letter-spacing: 5px;
+}
+/*DISEÑO DE PARAGRAFO*/
+
+/*ENCABEZADO*/
+.header {
+  width: 100%;
+  padding:5px;
+  margin:0;
+  text-align: center;
+  background-image:linear-gradient(to right, #2fbd82,hsl(207, 60%, 50%)); /*#2fbd82*/
+  color: white;
+} 
+/*ENCABEZADO*/
+
+/*Hover*/
+.btn-bgstroke:hover {
+  background-color: white;
+  color: hsl(207, 60%, 50%);
+}
+/*Hover*/
+
+/*DISTANCIA DE SEPARACION, ICONOS*/
+.inline-block
+{
+  display:inline-block;
+  padding:1em;
+}
+/*DISTANCIA DE SEPARACION, ICONOS*/
+
+/*CONTENEDOR*/
+
+/*CONTENEDOR*/
+
+/*PIE DE PAGINA*/
+footer {
+  width: 100%;
+  padding:1px;
+  left:0;
+  bottom:0px;
+  position: center;
+  text-align: center;
+  font-size:12px;
+  background: #d9e2ec;
+  color: rgb(60, 79, 88);
+}
+/*PIE DE PAGINA*/
+
+/*Scroll personalizado*/
+
+body::-webkit-scrollbar {
+  width:10px;
+  background:#383b42;
+}
+
+body::-webkit-scrollbar-thumb{
+  background:#2fbd82;
+  border-radius:10px;
+}
+/*Scroll personalizado*/
+
+.logo{
+  border-radius:50%;
+  border-style: solid;
+}
+.contenedor{
+  width:70%;
+  height:20em;
+  max-width:1000px;
+  margin:5px;
+  border-radius:20px;
+  position:relative;
+  left:13em;
+  bottom:10em;
+  z-index: -1;
+  background-color: #d9e2ec;
+
+}
+
+.sombra
+{
+  width:100%;
+  max-width:1000px;
+  height:315px;
+  margin:20px auto;
+  border-radius:20px;
+  background-color:#ffffff;
+
+}
+p.sobremi{
+  color:rgb(60, 79, 88);
+  font-size:15px;
+  text-align:center;
+  font-family: "Arial";
+  padding:5px;
+}
+
+p.titulo
+{
+  color:rgb(60, 79, 88);
+  background: #d9e2ec;
+  margin:10px auto;
+  border-top-right-radius:20px;
+  font-size: 20px;
+  text-align:center;
+  border-top-left-radius:20px;
+}
+
+.downline-block{
+  display:block;
+  margin-left:10px;
+  margin-top:0px;
+  padding:1px;
+}
+
+.downline-block-i{
+  display:block;
+  margin-left:11px;
+  font-style:italic;
+  margin-top:0px;
+  padding:1px;
+}
+
+.inline-block-logo{
+  display:inline-block;
+  margin-left:20px;
+  padding:0px;
+}
+
+
+
+/*Contenedor*/
+section.container{
+  width:70%;
+  height:305px;
+  max-width:1000px;
+  margin:5px;
+  border-radius:20px;
+  position:relative;
+  left:13em;
+  bottom:10em;
+  z-index: -1;
+  background: #d9e2ec;
+}
+.containerl
+{
+  width:100%;
+  max-width:1000px;
+  height:300px;
+  justify-content: center;
+  margin:20px auto;
+  border-radius:20px;
+  background-color:#ffffff;
+}
+p.container{
+  color:rgb(60, 79, 88);
+  font-size:1.5em;
+  text-align:right;
+  margin-right:6em;
+  font-family: "Nunito Sans";
+  padding:5px;
+}
+.container-block{
+  border-radius:20px;
+  margin-left:20px;
+  margin-top:35px;
+  border-style: solid;
+  border-width:5px;
+  border-color:#d9e2ec;
+}
+.container-text{
+  padding:10px;
+  margin:8px;
+  font-style: italic;
+  font-family:Ubuntu;
+  font-size:17px;
+  text-align: center;
+}
+.header-container{
+  margin:1em;
+  padding-top:1.5em;
+  font-style: bold;
+  color:#33cc8c;
+  font-family:Nunito Sans;
+  font-size:2em;
+  text-align: center;
+}
+/*Contenedor*/
+.form{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  margin-left:8%;
+  width:90%;
+  margin-top:-13%;
+  padding-bottom: 10%;
+  height:60em;
+  border-style:none;
+
+}
