--- a/index.css
+++ b/index.css
@@ -1,281 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Kodchasan:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Kodchasan:wght@300&family=Nunito+Sans:wght@800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@1,300&display=swap');
-
-*{
-  margin:0;
-  padding:0;
-  right: 10em;
-  box-sizing:border-box;
-  font-family:'Nunito Sans', sans-serif; /*Tipografia*/
-}
-body
-{
-  justify-content:center;
-  zoom: 100px;
-  background: #f0f4f8; /*Color del fondo*/
-}
-ul li
-{
-  position:relative;
-  list-style:none;
-  width:10em;
-  background:#d9e2ec;
-  padding:1em;
-  z-index: var(--i);
-  transition:0.5s;
-}
-
-.color {
-  background:#16fff3;
-}
-ul li:hover
-{
-  background:#33cc8c; /*color de la parte frontal del recuadro*/
-  transform:translateX(40px); /*distancia de deslice del recuadro*/
-}
-ul li a
-{
-  text-decoration: none;
-  color:rgb(60, 79, 88); /*color de las letras frontal del recuadro (Estatico)*/
-  display: block;
-  text-transform: uppercase;
-  letter-spacing: 0.05em;
-  transition: 0.5s;
-}
-
-ul li:hover a
-{
-  color: rgb(255, 255, 255); /*color de las letras frontal del recuadro (En accion)*/
-}
-/*Fin, del menu*/
-section.menu 
-{
-  position:left;
-  margin-left:10em;
-  margin-top:-15em;
-}
-@import url(https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900);
-/*MARGEN Y PADDING DE A,P,H1*/
-h1,
-p,
-a{
-  margin: 0px;
-  padding: 0;
-  font-family: 'Nunito Sans';
-}
-/*MARGEN Y PADDING DE A,P,H1*/
-
-/*DISEÑO DE H1*/
-h1 {
-  font-size: 2.5em;
-  left:1em;
-  font-weight: 800;
-}
-/*DISEÑO DE H1*/
-
-/*DISEÑO DE PARAGRAFO*/
-p.header {
-  font-size: 15px;
-  font-weight: 900;
-  letter-spacing: 5px;
-}
-/*DISEÑO DE PARAGRAFO*/
-
-/*ENCABEZADO*/
-.header {
-  width: 100%;
-  padding:5px;
-  margin:0;
-  text-align: center;
-  background-image:linear-gradient(to right, #2fbd82,hsl(207, 60%, 50%)); /*#2fbd82*/
-  color: white;
-} 
-/*ENCABEZADO*/
-
-/*Hover*/
-.btn-bgstroke:hover {
-  background-color: white;
-  color: hsl(207, 60%, 50%);
-}
-/*Hover*/
-
-/*DISTANCIA DE SEPARACION, ICONOS*/
-.inline-block
-{
-  display:inline-block;
-  padding:1em;
-}
-/*DISTANCIA DE SEPARACION, ICONOS*/
-
-/*CONTENEDOR*/
-
-/*CONTENEDOR*/
-
-/*PIE DE PAGINA*/
-footer {
-  width: 100%;
-  padding:1px;
-  left:0;
-  bottom:0px;
-  position: center;
-  text-align: center;
-  font-size:12px;
-  background: #d9e2ec;
-  color: rgb(60, 79, 88);
-}
-/*PIE DE PAGINA*/
-
-/*Scroll personalizado*/
-
-body::-webkit-scrollbar {
-  width:10px;
-  background:#383b42;
-}
-
-body::-webkit-scrollbar-thumb{
-  background:#2fbd82;
-  border-radius:10px;
-}
-/*Scroll personalizado*/
-
-.logo{
-  border-radius:50%;
-  border-style: solid;
-}
-.contenedor{
-  width:70%;
-  height:20em;
-  max-width:1000px;
-  margin:5px;
-  border-radius:20px;
-  position:relative;
-  left:13em;
-  bottom:10em;
-  z-index: -1;
-  background-color: #d9e2ec;
-
-}
-
-.sombra
-{
-  width:100%;
-  max-width:1000px;
-  height:315px;
-  margin:20px auto;
-  border-radius:20px;
-  background-color:#ffffff;
-
-}
-p.sobremi{
-  color:rgb(60, 79, 88);
-  font-size:15px;
-  text-align:center;
-  font-family: "Arial";
-  padding:5px;
-}
-
-p.titulo
-{
-  color:rgb(60, 79, 88);
-  background: #d9e2ec;
-  margin:10px auto;
-  border-top-right-radius:20px;
-  font-size: 20px;
-  text-align:center;
-  border-top-left-radius:20px;
-}
-
-.downline-block{
-  display:block;
-  margin-left:10px;
-  margin-top:0px;
-  padding:1px;
-}
-
-.downline-block-i{
-  display:block;
-  margin-left:11px;
-  font-style:italic;
-  margin-top:0px;
-  padding:1px;
-}
-
-.inline-block-logo{
-  display:inline-block;
-  margin-left:20px;
-  padding:0px;
-}
-
-
-
-/*Contenedor*/
-section.container{
-  width:70%;
-  height:305px;
-  max-width:1000px;
-  margin:5px;
-  border-radius:20px;
-  position:relative;
-  left:13em;
-  bottom:10em;
-  z-index: -1;
-  background: #d9e2ec;
-}
-.containerl
-{
-  width:100%;
-  max-width:1000px;
-  height:300px;
-  justify-content: center;
-  margin:20px auto;
-  border-radius:20px;
-  background-color:#ffffff;
-}
-p.container{
-  color:rgb(60, 79, 88);
-  font-size:1.5em;
-  text-align:right;
-  margin-right:6em;
-  font-family: "Nunito Sans";
-  padding:5px;
-}
-.container-block{
-  border-radius:20px;
-  margin-left:20px;
-  margin-top:35px;
-  border-style: solid;
-  border-width:5px;
-  border-color:#d9e2ec;
-}
-.container-text{
-  padding:10px;
-  margin:8px;
-  font-style: italic;
-  font-family:Ubuntu;
-  font-size:17px;
-  text-align: center;
-}
-.header-container{
-  margin:1em;
-  padding-top:1.5em;
-  font-style: bold;
-  color:#33cc8c;
-  font-family:Nunito Sans;
-  font-size:2em;
-  text-align: center;
-}
-/*Contenedor*/
-.form{
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  margin-left:8%;
-  width:90%;
-  margin-top:-13%;
-  padding-bottom: 10%;
-  height:60em;
-  border-style:none;
-
-}
+@import url("https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300&display=swap");@import url("https://fonts.googleapis.com/css2?family=Kodchasan:wght@300&display=swap");@import url("https://fonts.googleapis.com/css2?family=Kodchasan:wght@300&family=Nunito+Sans:wght@800&display=swap");@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@1,300&display=swap");*{margin-left:0;}*{margin-bottom:0;}*{margin-right:0;}ul li:hover a{color:#fff;}*{margin-top:0;}ul li{position:relative;}ul li{list-style:none;}.color{background:#16fff3;}*{padding-left:0;}*{padding-bottom:0;}ul li{width:10em;}ul li:hover{background:#33cc8c;}ul li{background:#d9e2ec;}*{padding-right:0;}*{padding-top:0;}body{justify-content:center;}ul li:hover{transform:translateX(40px);}ul li{padding-left:1em;}ul li{padding-bottom:1em;}*{right:10em;}*{box-sizing:border-box;}body{zoom:100px;}ul li a{text-decoration:none;}ul li a{color:#3c4f58;}section[class~=menu]{position:left;}ul li a{display:block;}ul li{padding-right:1em;}section[class~=menu]{margin-left:10em;}ul li{padding-top:1em;}ul li{z-index:var(--i);}*{font-family:"Nunito Sans",sans-serif;}body{background:#f0f4f8;}ul li a{text-transform:uppercase;}ul li a,ul li{transition:.5s;}ul li a{letter-spacing:.05em;}section[class~=menu]{margin-top:-15em;}@import url("https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900");[class~=header]{width:100%;}[class~=header],p[class~=sobremi]{padding-left:3.75pt;}[class~=header],p[class~=sobremi]{padding-bottom:3.75pt;}p[class~=sobremi],p[class~=header]{font-size:11.25pt;}[class~=header]{padding-right:3.75pt;}p,h1{margin-left:0in;}[class~=header]{padding-top:3.75pt;}p,h1{margin-bottom:0in;}p[class~=header]{font-weight:900;}[class~=header]{margin-left:0;}p[class~=header]{letter-spacing:5px;}[class~=header]{margin-bottom:0;}[class~=header]{margin-right:0;}[class~=header]{margin-top:0;}p[class~=sobremi],[class~=header]{text-align:center;}[class~=header]{background-image:linear-gradient(to right,#2fbd82,hsl(207,60%,50%));}p,h1{margin-right:0in;}p[class~=titulo],p[class~=sobremi]{color:#3c4f58;}[class~=header]{color:white;}[class~=inline-block]{display:inline-block;}h1,p{margin-top:0in;}p,h1{padding-left:0;}[class~=inline-block]{padding-left:1em;}p[class~=sobremi]{font-family:"Arial";}[class~=inline-block]{padding-bottom:1em;}[class~=inline-block]{padding-right:1em;}h1,p{padding-bottom:0;}h1,p{padding-right:0;}[class~=inline-block]{padding-top:1em;}p,h1{padding-top:0;}p,h1{font-family:"Nunito Sans";}[class~=logo]{border-radius:50%;}[class~=logo]{border-left-style:solid;}[class~=logo]{border-bottom-style:solid;}[class~=logo]{border-right-style:solid;}[class~=logo]{border-top-style:solid;}.contenedor{width:70%;}.contenedor{height:20em;}.contenedor,[class~=sombra]{max-width:62.5pc;}.contenedor{margin-left:.3125pc;}.contenedor{margin-bottom:.3125pc;}.contenedor{margin-right:.3125pc;}.contenedor{margin-top:.3125pc;}[class~=sombra],.contenedor{border-radius:1.25pc;}.contenedor{position:relative;}.contenedor{left:13em;}.contenedor{bottom:10em;}.contenedor{z-index:-1;}.contenedor{background-color:#d9e2ec;}p[class~=sobremi]{padding-right:.052083333in;}[class~=sombra]{width:100%;}p[class~=sobremi]{padding-top:.052083333in;}[class~=sombra]{height:3.28125in;}p[class~=titulo],[class~=sombra]{margin-left:auto;}p[class~=titulo]{background:#d9e2ec;}[class~=sombra]{margin-bottom:15pt;}[class~=sombra],p[class~=titulo]{margin-right:auto;}[class~=sombra]{margin-top:15pt;}a{margin-left:0in;}[class~=sombra]{background-color:#fff;}[class~=downline-block-i],[class~=downline-block]{display:block;}[class~=downline-block]{margin-left:.104166667in;}[class~=downline-block],[class~=downline-block-i]{margin-top:0pc;}a{margin-bottom:0in;}p[class~=titulo]{margin-bottom:.104166667in;}[class~=downline-block],[class~=downline-block-i]{padding-left:.0625pc;}[class~=btn-bgstroke]:hover{background-color:white;}p[class~=titulo]{margin-top:.104166667in;}[class~=downline-block],[class~=downline-block-i]{padding-bottom:.0625pc;}a{margin-right:0in;}[class~=downline-block],[class~=downline-block-i]{padding-right:.0625pc;}p[class~=titulo]{border-top-right-radius:20px;}p[class~=titulo]{font-size:1.25pc;}a{margin-top:0in;}[class~=downline-block],[class~=downline-block-i]{padding-top:.0625pc;}[class~=downline-block-i]{margin-left:11px;}[class~=downline-block-i]{font-style:italic;}a{padding-left:0;}a{padding-bottom:0;}a{padding-right:0;}p[class~=titulo]{text-align:center;}[class~=inline-block-logo]{display:inline-block;}[class~=inline-block-logo]{margin-left:.208333333in;}[class~=inline-block-logo]{padding-left:0pt;}[class~=inline-block-logo]{padding-bottom:0pt;}[class~=inline-block-logo]{padding-right:0pt;}[class~=inline-block-logo]{padding-top:0pt;}p[class~=titulo]{border-top-left-radius:15pt;}section[class~=container]{width:70%;}a{padding-top:0;}footer,[class~=containerl]{width:100%;}section[class~=container]{height:228.75pt;}section[class~=container],[class~=containerl]{max-width:750pt;}[class~=containerl]{height:300px;}section[class~=container]{margin-left:.3125pc;}a{font-family:"Nunito Sans";}[class~=containerl]{justify-content:center;}[class~=containerl]{margin-left:auto;}section[class~=container]{margin-bottom:.3125pc;}[class~=containerl]{margin-bottom:1.25pc;}section[class~=container]{margin-right:.3125pc;}h1{font-size:2.5em;}[class~=containerl]{margin-right:auto;}[class~=containerl]{margin-top:1.25pc;}section[class~=container]{margin-top:.3125pc;}section[class~=container],[class~=container-block],[class~=containerl]{border-radius:15pt;}[class~=containerl]{background-color:#fff;}h1{left:1em;}[class~=container-block]{margin-left:.208333333in;}[class~=container-block]{margin-top:.364583333in;}[class~=container-block]{border-left-style:solid;}[class~=container-block]{border-bottom-style:solid;}section[class~=container]{position:relative;}h1{font-weight:800;}[class~=container-block]{border-right-style:solid;}[class~=container-block]{border-top-style:solid;}section[class~=container]{left:13em;}footer{padding-left:.010416667in;}section[class~=container]{bottom:10em;}footer{padding-bottom:.010416667in;}[class~=container-block]{border-left-width:3.75pt;}footer{padding-right:.010416667in;}section[class~=container]{z-index:-1;}section[class~=container],footer{background:#d9e2ec;}footer,p[class~=container]{color:#3c4f58;}[class~=btn-bgstroke]:hover{color:hsl(207,60%,50%);}[class~=container-block]{border-bottom-width:3.75pt;}footer{padding-top:.010416667in;}[class~=container-block]{border-right-width:3.75pt;}[class~=container-block]{border-top-width:3.75pt;}[class~=container-block]{border-left-color:#d9e2ec;}[class~=container-block]{border-bottom-color:#d9e2ec;}[class~=container-block]{border-right-color:#d9e2ec;}footer{left:0;}[class~=container-block]{border-top-color:#d9e2ec;}.container-text{padding-left:7.5pt;}.container-text{padding-bottom:7.5pt;}.container-text{padding-right:7.5pt;}.container-text{padding-top:7.5pt;}p[class~=container]{font-size:1.5em;}footer{bottom:0in;}footer{position:center;}.container-text{margin-left:.083333333in;}.container-text{margin-bottom:.083333333in;}.container-text,footer,[class~=header-container]{text-align:center;}.container-text{margin-right:.083333333in;}p[class~=container]{text-align:right;}.container-text{margin-top:.083333333in;}p[class~=container]{margin-right:6em;}p[class~=container]{font-family:"Nunito Sans";}.container-text{font-style:italic;}p[class~=container]{padding-left:.3125pc;}p[class~=container]{padding-bottom:.3125pc;}p[class~=container]{padding-right:.3125pc;}p[class~=container]{padding-top:.3125pc;}footer{font-size:.75pc;}.container-text{font-family:Ubuntu;}.container-text{font-size:17px;}[class~=header-container]{margin-left:1em;}body::-webkit-scrollbar{width:.625pc;}[class~=header-container]{margin-bottom:1em;}body::-webkit-scrollbar{background:#383b42;}body::-webkit-scrollbar-thumb{background:#2fbd82;}[class~=header-container]{margin-right:1em;}body::-webkit-scrollbar-thumb{border-radius:.625pc;}[class~=header-container]{margin-top:1em;}[class~=header-container]{padding-top:1.5em;}[class~=header-container]{font-style:bold;}[class~=header-container]{color:#33cc8c;}[class~=header-container]{font-family:Nunito Sans;}[class~=header-container]{font-size:2em;}.form{display:flex;}.form{justify-content:center;}.form{align-items:center;}.form{margin-left:8%;}.form{width:90%;}.form{margin-top:-13%;}.form{padding-bottom:10%;}.form{height:60em;}.form{border-left-style:none;}.form{border-bottom-style:none;}.form{border-right-style:none;}.form{border-top-style:none;}
